Adding required values

--- a/config.yml
+++ b/config.yml
@@ -1,3 +1,4 @@
-state: "" # choose state of  (e.g. "newyork")
-temperatureUnit: "" # "ceclius" or "fahrenheit"
-energyThreshold: 300 # do not touch unless you know what you are doing
+# * Required
+state: "" # choose state of  (e.g. "newyork") *
+temperatureUnit: "" # "ceclius" or "fahrenheit" *
+energyThreshold: 300 # do not touch unless you know what you are doing *
