--- a/config.yml
+++ b/config.yml
@@ -1,6 +1,6 @@
 # * Required
 state: "" # choose state of  (e.g. "newyork") *
-temperatureUnit: "" # "ceclius" or "fahrenheit" *
+temperatureUnit: "" # "celsius" or "fahrenheit" *
 energyThreshold: 300 # do not touch unless you know what you are doing. *
 
 raspberryPi:
